@@ -7,8 +7,6 @@ import io.quarkus.test.junit.QuarkusIntegrationTest;
 import io.restassured.common.mapper.TypeRef;
 import org.alliancegenome.mati.configuration.PostgresResource;
 import org.alliancegenome.mati.entity.SubdomainEntity;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.Test;
 
@@ -21,14 +19,6 @@ import static org.hamcrest.Matchers.is;
 @WithTestResource(value = PostgresResource.class)
 @Order(1)
 class SubdomainResourceITCase {
-
-    @BeforeEach
-    void setUp() {
-    }
-
-    @AfterEach
-    void tearDown() {
-    }
 
     @Test
     public void getAll() {
@@ -48,7 +38,7 @@ class SubdomainResourceITCase {
             .statusCode(200).extract().body().as(getSubdomainEntityTypeRef());
 
         assertThat(result.size(), is(1));
-        assertThat(result.get(0).getCode(), is("100"));
+        assertThat(result.getFirst().getCode(), is("100"));
     }
 
     private TypeRef<List<SubdomainEntity>> getSubdomainEntityTypeRef() {
